# badger-boilerplate

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
src/: battery.rs  bt.rs  buttons.rs  display.rs  env.rs  flash.rs  helpers.rs  http.rs  image.rs  led.rs  main.rs  save.rs  state.rs  time.rs  wifi.rs
src/badge_display/: display_image.rs  mod.rs
src/pcf85063a/: alarm.rs  datetime.rs  mod.rs
