[package]
name = "rusty_badger"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-embedded-hal = { version = "0.5.0", features = [
    "defmt",
] }
embassy-sync = { version = "0.7.2", features = [
    "defmt",
] }
embassy-executor = { version = "0.9.1", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.9.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040",
] }
embassy-net = { version = "0.8.0", features = [
    "defmt",
    "tcp",
    "udp",
    "raw",
    "dhcpv4",
    "medium-ethernet",
    "dns",
] }
cyw43 = { version = "0.6.0", features = [
    # "defmt",
    # "firmware-logs",
    "bluetooth",
] }
cyw43-pio = { version = "0.9.0", features = [
    "defmt",
] }

defmt = "0.3"
defmt-rtt = "0.4"

reqwless = { git = "https://github.com/drogue-iot/reqwless.git", features = ["defmt"] }
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
serde-json-core = "0.6"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
panic-reset = "0.1.1"

embedded-graphics = "0.8.1"
byte-slice-cast = { version = "1.2.0", default-features = false }

heapless = { version = "0.8", features = ["serde"] }

embedded-hal = { version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.3", features = ["async"] }
# embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
static_cell = "2"
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"
rand = { version = "0.8.5", default-features = false }
embedded-sdmmc = "0.7.0"
uc8151 = { git = "https://github.com/9names/uc8151-rs.git", features = [
    "graphics",
] }
tinybmp = "0.5.0"
postcard = "1.0.8"
time = { version = "0.3.17", default-features = false }
pcf85063a = "0.1.1"
embassy-futures = "0.1.2"
embedded-storage-async = "0.4.1"
u8g2-fonts = { version = "0.7.2", features = ["embedded_graphics_textstyle"] }
trouble-host = "0.5.1"

[[bin]]
name = "rusty_badger"
test = false
bench = false

[profile.release]
lto = "fat"
strip = true
codegen-units = 1
opt-level = "z"
